platform_versioned_docs/version-4.8.0/configure/platform-configs/single-sign-on.mdx
---
title: "SSO Providers"
sidebar_label: "SSO Providers"
sidebar_position: 1
---

import Flow, { Step } from "@site/src/components/Flow";
import NavStep from "@site/src/components/NavStep";
import Button from "@site/src/components/Button";
import Label from "@site/src/components/Label";

import PartialAuthOkta from "../../_partials/auth/sso/okta.mdx";
import PartialAuthSAML from "../../_partials/auth/sso/saml.mdx";
import PartialAuthLDAP from "../../_partials/auth/sso/ldap.mdx";
import PartialAuthGitHub from "../../_partials/auth/sso/github.mdx";
import PartialAuthGitLab from "../../_partials/auth/sso/gitlab.mdx";
import PartialAuthMicrosoft from "../../_partials/auth/sso/microsoft.mdx";
import PartialAuthGoogle from "../../_partials/auth/sso/google.mdx";
import PartialAuthOIDC from "../../_partials/auth/sso/oidc.mdx";
import PartialAuthOther from "../../_partials/auth/sso/generic.mdx";

import PartialMultipleSSO from "../../_partials/install/multiple-sso.mdx";

The platform supports all major Single-Sign-On (SSO) providers. To configure SSO
for the platform, expand the
desired SSO provider (for example Google, Okta, GitHub) field listed below and follow the instructions
provided.

:::caution Domain Required
Most SSO provider connections do not allow `localhost` and require that you
[set up a domain for your platform instance](../installation-options/domain.mdx) first.
:::

<!-- vale off -->
## Providers
<!-- vale on -->

<details>
  <summary>GitHub</summary>
  <PartialAuthGitHub />
</details>

<details>
  <summary>OIDC</summary>
  <PartialAuthOIDC />
</details>

<details>
  <summary>GitLab</summary>
  <PartialAuthGitLab />
</details>

<details>
  <summary>Microsoft</summary>
  <PartialAuthMicrosoft />
</details>

<details>
  <summary>Google</summary>
  <PartialAuthGoogle />
</details>

<details>
  <summary>Okta</summary>
  <PartialAuthOkta />
</details>

<details>
  <summary>SAML 2.0</summary>
  <PartialAuthSAML />
</details>

<details>
  <summary>LDAP</summary>
  <PartialAuthLDAP />
</details>

<details>
  <summary>Other (OpenShift, LinkedIn ...)</summary>
  <PartialAuthOther />
</details>

<!-- vale off -->
## Multiple SSO providers
<!-- vale on -->

<PartialMultipleSSO />
<!-- vale off -->
## SSO group sync
<!-- vale on -->
The platform can be configured to allow user authentication via Single-Sign-On (SSO). SSO is an authentication method that enables users to access multiple applications with a single set of login credentials. This feature allows users with a valid account on another service (e.g., GitHub) to authenticate and log into the platform using that service. While this approach simplifies user management for administrators, a mechanism is still needed to ensure appropriate permissions are applied to these users. SSO groups address this need.

Most SSO providers allow administrators to configure data shared with
authenticating platforms. Among this shared data, the list of groups to which
the authenticating user belongs is particularly important. Upon SSO
authentication in the platform, this group data is inspected. The user is
automatically joined to any Teams that include any of the provided group names
in the `SSO Groups as Members` field. Any SSO group names not set in any Team's
`SSO Groups as Members` field is going to be dynamically created as a new Team, with the group name automatically set in the `SSO Groups as Members` field.

This group behavior allows administrators to create Teams in the platform that correspond to teams (groups) in the SSO identity provider, set the appropriate policy for those Teams, and enable users to be automatically assigned to the appropriate team, and thus privileges, upon logging in via SSO.

:::info
If a user belongs to multiple SSO groups that correspond to different Teams in
the platform, they are going to be added to all matching Teams.
:::

## Create a team with SSO group membership
<!-- vale off -->
<Flow id="create-team-with-sso-group-membership">
  <Step>
    Select the <NavStep>Users</NavStep> field on the left menu bar.
  </Step>
  <Step>
    Click the <NavStep>Teams</NavStep> button on the User Management screen.
  </Step>
  <Step>
    Click the <Button>Add Team</Button> button.
  </Step>
  <Step>
    In the drawer that appears from the right, give your new team a name by
    replacing the  'my-team' placeholder name, or by updating the manifest YAML
    'metadata.name' field.
  </Step>
  <Step>
    In the <Label>Team Members</Label> tab enter any desired groups into the{" "}
    <Label>SSO Groups as Members</Label> field. You can add as many groups as
    you would like here. These group names must exactly match the group name
    that the SSO provider shares with the platform during SSO authentication.
  </Step>
  <Step>Make any additional desired modifications to your new Team.</Step>
  <Step>
    Click on the <Button>Save Changes</Button> button.
  </Step>
</Flow>
<!-- vale on -->
